# Game-Repository

./: .gitignore  README.md  angular.json  package-lock.json  package.json
mpp3/View/: package-lock.json
mpp3/View/src/: App.css  App.js  App.test.js
mpp3/View/src/Service/: Service.js
mpp3/View/src/components/: AddGame.js  EditGame.js  PieChart.js  VideoGameTable.js
mpp3/View/src/styles/: GameDetailsStyle.js  VideoGameTableStyle.js
mpp3/View/src/tests/: AddGame.test.js
mpp3/ViewController/: Cargo.toml
mpp3/ViewController/src/: main.rs  model.rs  repo.rs  routes.rs  tests.rs
mpp4/: .gitignore
mpp4/View/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
mpp4/View/src/: App.js
mpp4/View/src/Service/: Service.js
mpp4/View/src/components/: AddCompany.js  AddGame.js  CompanyDetails.js  CompanyTable.js  EditCompany.js  EditGame.js  EditUser.js  (+5 more)
mpp4/ViewController/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  elec
mpp4/ViewController/migrations/2024-04-25-201217_create_tables/: down.sql  up.sql
mpp4/ViewController/migrations/2024-05-14-130346_users/: up.sql
mpp4/ViewController/migrations/2024-06-01-084547_new/: down.sql  up.sql
mpp4/ViewController/migrations/2024-06-01-093747_user_type/: down.sql  up.sql
mpp4/ViewController/migrations/2024-06-01-094210_remove_added_by/: up.sql
mpp4/ViewController/src/: main.rs  model.rs  repo.rs  routes.rs  schema.rs  tests.rs  userModel.rs  userRepo.rs  user_model.rs  user_repo.rs
src/: index.html
src/app/: app.component.spec.ts  app.component.ts
(+4 files in other folders)
