[package]
name = "my-rocket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.4", features = ["json"]}
rocket_contrib = {version = "0.4.0-rc.2", features = ["json"]}
rocket_cors = "0.6.0"
figment = "0.10.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
fake = "2.9.2"
rand = "0.8.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
dotenv = "0.15.0"
diesel = { version = "2.1.1", features = ["chrono", "r2d2", "postgres"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.19", features = ["serde"] }